--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
   },
   "dependencies": {
     "@hyperdx/browser": "^0.22.0",
-    "@hyperdx/cli": "^0.1.0",
     "@microsoft/signalr": "^10.0.0",
     "@microsoft/signalr-protocol-msgpack": "^10.0.0",
     "@mixer/postmessage-rpc": "^1.1.4",
     "@oneidentity/zstd-js": "^1.0.3",
+    "@msgpack/msgpack": "2.8.0",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-autostart": "^2.5.1",
     "@tauri-apps/plugin-http": "^2.5.4",
@@ -51,6 +51,7 @@
     "idb-keyval": "^6.2.2",
     "jszip": "^3.10.1",
     "linqts": "^3.2.0",
+    "long": "5.3.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "md5": "^2.3.0",
@@ -67,14 +68,11 @@
     "unplugin-vue-markdown": "^29.2.0",
     "uuid": "^13.0.0",
     "vite": "npm:rolldown-vite@7.2.5",
-    "vite-plugin-monaco-editor-nls": "^3.0.1",
     "vite-svg-loader": "^5.1.0",
     "vue": "3.5.24",
     "vue-echarts": "^8.0.1",
     "vue-img-cutter": "^3.0.7",
-    "vue-request": "^2.0.4",
     "vue-router": "^4.6.3",
-    "vue-toastification": "^1.7.14",
     "vue-turnstile": "^1.0.11",
     "vue3-aplayer": "^1.7.3",
     "vue3-marquee": "^4.2.2",
@@ -88,19 +86,15 @@
     "@tsparticles/engine": "^3.9.1",
     "@types/bun": "^1.3.2",
     "@types/file-saver": "^2.0.7",
-    "@types/jszip": "^3.4.1",
-    "@types/uuid": "^11.0.0",
     "@vicons/ionicons5": "^0.13.0",
     "@vitejs/plugin-vue-jsx": "^5.1.1",
-    "@volar/typescript": "^2.4.27",
     "@vue-vine/eslint-config": "^1.1.11",
     "eslint": "^9.39.1",
     "eslint-plugin-oxlint": "^1.28.0",
+    "knip": "5.52.0",
     "oxlint": "^1.28.0",
-    "rollup-plugin-visualizer": "^6.0.5",
     "stylus": "^0.64.0",
     "typescript": "^5.9.3",
-    "vite-plugin-cdn-import": "^1.0.1",
     "vue-tsc": "^3.2.2",
     "vue-vine": "^1.7.23"
   }
