--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "@microsoft/signalr": "^10.0.0",
     "@microsoft/signalr-protocol-msgpack": "^10.0.0",
     "@mixer/postmessage-rpc": "^1.1.4",
-    "@oneidentity/zstd-js": "^1.0.3",
     "@msgpack/msgpack": "2.8.0",
+    "@oneidentity/zstd-js": "^1.0.3",
     "@tauri-apps/api": "^2.9.0",
     "@tauri-apps/plugin-autostart": "^2.5.1",
     "@tauri-apps/plugin-http": "^2.5.4",
@@ -51,9 +51,9 @@
     "idb-keyval": "^6.2.2",
     "jszip": "^3.10.1",
     "linqts": "^3.2.0",
-    "long": "5.3.1",
     "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
+    "long": "5.3.1",
     "md5": "^2.3.0",
     "mitt": "^3.0.1",
     "monaco-editor": "^0.54.0",
@@ -69,6 +69,7 @@
     "uuid": "^13.0.0",
     "vite": "npm:rolldown-vite@7.2.5",
     "vite-svg-loader": "^5.1.0",
+    "vtubestudio": "^3.11.0",
     "vue": "3.5.24",
     "vue-echarts": "^8.0.1",
     "vue-img-cutter": "^3.0.7",
